site filled out for the most part, needs to be styled

--- a/public/index.css
+++ b/public/index.css
@@ -11,3 +11,18 @@ body {
     max-height: 10%;
     min-height: 40px;
 }
+
+#hero-home{
+    height: 100vh;
+    width: 100vh;
+}
+
+#about-me-section{
+    height: 100vh;
+    width: 100vw;
+}
+
+#portfolio-section{
+    height: 100vh;
+    width: 100vw;
+}
