worked on styling about and potfolio section- still some stuff to do, but coming along

--- a/public/index.css
+++ b/public/index.css
@@ -14,7 +14,8 @@ zaffre: #3423A6
 */
 
 /* imports */
-@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&family=Monoton&family=Poppins&family=Quicksand:wght@500&family=Righteous&family=Rubik+Mono+One&family=Tilt+Warp&family=Urbanist&family=Yeseva+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&family=Monoton&family=Poppins:wght@400;600&family=Quicksand:wght@500&family=Righteous&family=Rubik+Mono+One&family=Tilt+Warp&family=Urbanist&family=Yeseva+One&display=swap');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css');
 body {
     margin: 0;
     /* background-color: #354F52; */
@@ -33,6 +34,8 @@ body {
     flex-grow: 1;
     max-height: 10%;
     min-height: 40px;
+    margin-left: 10px;
+    /* margin-top: 5px; */
     position: fixed;
     top: 0;
     bottom: 0;
@@ -53,7 +56,20 @@ body {
 }
 
 #navbar ul a{
-    color: #F79824;
+    color: #F6C0D0;
+    text-decoration: none;
+    border-bottom: 3px dashed #7692FF;
+    font-weight: 600;
+    transition: ease-in;
+    transition-duration: 0.3s;
+}
+
+#navbar ul a:hover{
+    color: #FDCA40;
+    text-decoration: none;
+    border-bottom: 3px dashed #FF9FE5;
+    transition: ease-in;
+    transition-duration: 0.3s;
 }
 
 #navbar ul li{
@@ -61,24 +77,31 @@ body {
 }
 
 #navbar h2{
+    border: 2px solid #FDCA40;
+    border-radius: 35px;
+    padding: 10px;
+    text-align: center;
+}
+
+#nav-name{
     font-family: 'Tilt Warp', sans-serif;
     color: #F6C0D0;
-    border: 2px dashed #33A1FD;
-    border-radius: 35px;
-    /* padding: 5px; */
     letter-spacing: 2px;
+    text-align: center;
 }
 
 #hero-home{
     height: 100vh;
     width: 100vw;
     color: #7692FF;
-    /* text-shadow: 2px 2px 3px #5603AD; */
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     margin: auto;
+    animation: fadeInUp;
+    animation-duration: 3s;
+    /* animation-delay: 1s; */
 }
 
 #hero-home h1{
@@ -110,8 +133,17 @@ body {
     flex-direction: column;
     text-align: center;
     font-family: 'Tilt Warp', sans-serif;
-    font-size: 20pt;
+    align-items: center;
+    justify-content: center;
     color: #F6C0D0;
+    padding-top: 60px;
+}
+
+.about-intro h2{
+    font-size: 25pt;
+    width: max-content;
+    border-bottom: 4px solid #FF9FE5;
+    text-align: center;
 }
 
 .pics{
@@ -130,8 +162,9 @@ body {
 }
 
 #about-me-section{
-    height: 100vh;
-    width: 100vw;
+    /* height: 100vh;*/
+    /* width: 100vw;  */
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -141,12 +174,21 @@ body {
 .about-articles{
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
-    /* justify-content: center; */
     text-align: center;
     margin: 10px;
-    background-color: #3423A6;
+    background-color: #F6C0D0;
+    color: #040529;
+    border:  5px solid #7692FF;
     max-width: 450px;
+    border-radius: 35px;
+    padding: 15px;
+    font-weight: 600;
+}
+
+.about-articles h3{
+    color: #2B50AA;
+    border-bottom: 4px dashed #7692FF;
+    letter-spacing: 2px;
 }
 
 #hold-about-content{
@@ -156,11 +198,20 @@ body {
 
 #folio-holder{
     height: 100vh;
-    width: 100vw;
+    /* width: 100vw; */
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+#folio-holder h2{
+    font-family: 'Tilt Warp', sans-serif;
+    color: #F6C0D0;
+    font-size: 25pt;
+    width: max-content;
+    border-bottom: 4px solid #FF9FE5;
 }
 
 
@@ -174,10 +225,48 @@ body {
 #portfolio-section .folio-card{
     display: flex;
     flex-direction: column;
-    width: 450px;
+    align-items: center;
+    justify-content: center;
+    width: 430px;
     padding: 10px;
     border-radius: 35px;
-    background-color: #8367C7;
-    margin-right: 10px;
+    background-color: #F6C0D0;
+    color: #040529;
+    font-weight: 600;
+    margin: 5px;
+}
+
+.folio-card h3{
+    color: #2B50AA;
+    font-weight: 600;
+    border: 4px solid #7692FF;
+    padding: 5px;
+    border-radius: 35px;
+}
+
+.folio-pics{
+    height: 200px;
+    width: 270px;
+    border-radius: 35px;
+    border: 4px solid #FF9FE5;
+    padding: 5px;
+    transition: ease-in;
+    transition-duration: 0.3s;
+}
+
+.folio-pics:hover{
+    background-color: #FF9FE5;
+    border: 4px dashed #7692FF;
+    transition: ease-in;
+    transition-duration: 0.3s;
+}
+
+/* .effect:hover{
+    background-color: rgb(255,159,229, 0.3);
+    background-color: rgb(58, 58, 58, 0.3);
+} */
+
+#bottom{
+    text-align: center;
 }
 
